validation du formulaire en utiliant Ajax

--- a/templates/ajax_et_symfony/index.html.twig
+++ b/templates/ajax_et_symfony/index.html.twig
@@ -31,9 +31,9 @@
 					</tr>
 					<tr>
 						<td>1</td>
-						<td>Tita</td>
-						<td>20 ans</td>
-						<td>699-34-56-09</td>
+						<td id="nom">Tita</td>
+						<td class="age">20 ans</td>
+						<td id"contact2">699-34-56-09</td>
 					</tr>
 			</table>	
 		</div>
