on crée la bd et on affiche les données dans la console

--- a/templates/ajax_et_symfony/index.html.twig
+++ b/templates/ajax_et_symfony/index.html.twig
@@ -17,11 +17,10 @@
 				<button type="submit" id="click" class='btn btn-success'>Valder</button>
 			</form>
 		</div>
+		<div class="col-md-3" id="dataresult2">
+			<div id="dataresult2"></div>	
+		</div>
 	</div>
 	<br>
-	<div class="row">
-		<div class="col-md-1"></div>
-	
-	</div>
 
 {% endblock %}
