--- a/templates/ajax_et_symfony/index.html.twig
+++ b/templates/ajax_et_symfony/index.html.twig
@@ -4,21 +4,41 @@
 {% endblock %}
 
 {% block body %}
-	<div class="row">
+	<h1 class="container">Ma premiere application symfony avec ajax</h1>
+	<div class="row container">
 		<div class="col-md-1"></div>
-		<div class="col-md-7">
-			<p id="mes"></p>
-			<h1>Ma premiere application symfony avec ajax</h1>
-			<div id="dataresult"></div>
-			<form autocomplete="off" method="POST" id="quickForm" class="form-inline">
-				<input type="text" name="input" id="input" class="form-control" placeholder="Nom...">
-				<input type="text" name="age" id="age" class="form-control" placeholder="Age...">
-				<input type="text" name="contact" id="contact" class="form-control" placeholder="Contact...">
-				<button type="submit" id="click" class='btn btn-success'>Valder</button>
-			</form>
+		<div class="col-md-6" id="dataresult2">
+			<div id="dataresult2">
+				<table class="table table-bordered">
+					<thead></thead>
+					<tbody>
+						{% for client in clients %}
+							<tr>
+								<td>{{client.id}}</td>
+								<td>{{client.nom}}</td>
+								<td>{{client.contact}}</td>
+							</tr>
+						{% endfor %}
+					</tbody>
+				</table>
+			</div>	
 		</div>
-		<div class="col-md-3" id="dataresult2">
-			<div id="dataresult2"></div>	
+		<div class="col-md-4">
+			<div id="message alert alert-success"></div>
+			<form autocomplete="off" method="POST" id="quickForm" class="form-group">
+				<div class="form-group">
+					<input type="text" name="name" id="name" class="form-control" placeholder="Nom...">
+				</div>
+				<div class="form-group">
+					<input type="text" name="old" id="old" class="form-control" placeholder="Age...">
+				</div>
+				<div class="form-group">
+					<input type="text" name="adresse" id="adresse" class="form-control" placeholder="Contact...">
+				</div>
+				<div class="form-group">
+					<button type="submit" id="click" class='btn btn-success'>Valder</button>
+				</div>
+			</form>
 		</div>
 	</div>
 	<br>
