--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,6 +26,7 @@
 	{% block body %}{% endblock %}
 	{% block javascripts %}
 	<script src="lib/jquery/jquery.min.js"></script>
+	<script src="lib/bootstrap/js/bootstrap.min.js"></script>
 	<script src="dist/sweetalert.min.js"></script>
 	{#{{ encore_entry_script_tags('app') }}#}
 	<script>
@@ -35,7 +36,7 @@
 				var name = $('#name').val()
 				var adresse = $('#adresse').val()
 				var old = $('#old').val()
-				var url1= "{{path('app_traiter')}}"
+				var url1= "{{path('ajouterClient')}}"
 				var url2= "{{path('app_ajax')}}"
 				$.ajax({
 					url: url1,
@@ -43,7 +44,7 @@
 					data: { nom:name,contact:adresse,age:old },
 					success: function (data) {
 						console.log(data);
-						$('#quickForm')[0].reset()
+						// $('#quickForm')[0].reset()
 						$('.table').load(location.href+' .table')
 						//$('#message').html(data)
 						swal('',data.message)
@@ -57,31 +58,6 @@
 			})
 
 		})
-		function data() {
-			$.ajax({
-				url: "{{path('app_afficher')}}",
-				method: "GET",
-				success: function (data) {
-					//swal('',data.nom)
-					//$("#dataresult").css("display", "block")
-					//console.log(data);
-					$.each(data.client,function (key,item) {
-						$('tbody').append('<tr>\
-							<td>'+item.id+'</td>\
-							<td>'+item.nom+'</td>\
-							<td>'+item.contact+'</td>\
-							</tr>\
-						')
-					})
-
-				},
-				error: function (XMLHttpRequest, textStatus, errorThrown) {
-					//alert(textStatus)
-				}
-
-			})
-			//setTimeout(data, 1000)
-		}
 		
 	</script>
 	{% endblock %}
