--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,14 +10,14 @@
 	{# Run `composer require symfony/webpack-encore-bundle`
 	and uncomment the following Encore helpers to start using Symfony UX #}
 	{% block stylesheets %}
-	<link href="img/favicon.png" rel="icon">
-	<link href="img/apple-touch-icon.png" rel="apple-touch-icon">
-	<!-- Bootstrap core CSS -->
-	<link href="dist/css/bootstrap.min.css" rel="stylesheet">
-	<link href="dist/css/sweetalert.css" rel="stylesheet">
 	<!--external css-->
 	{#{{ encore_entry_link_tags('app') }}#}
 	{% endblock %}
+	<link href="img/favicon.png" rel="icon">
+	<link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+	<!-- Bootstrap core CSS -->
+	<link href="../dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="dist/css/sweetalert.css" rel="stylesheet">
 
 </head>
 
@@ -25,15 +25,17 @@
 	{% include "layouts/admin/navigation.html.twig" %}
 	{% block body %}{% endblock %}
 	{% block javascripts %}
-	<script src="dist/js//jquery.min.js"></script>
-	<script src="dist/js//bootstrap.min.js"></script>
+	<script src="../dist/js//jquery.min.js"></script>
+	<script src="../dist/js//bootstrap.min.js"></script>
 	<script src="dist/js/sweetalert.min.js"></script>
 
 	{#{{ encore_entry_script_tags('app') }}#}
 	<script src="dist/js/Ajax.js"></script>
 	<script>
-		var url1= "{{path('ajouterClient')}}"
+		var url1= "{{path('insertClient')}}"
+		var url2= "{{path('deleteClient')}}"
 		insert(url1)
+		remove(url2)
 	</script>
 	{% endblock %}
 </body>
