--- a/templates/layouts/admin/navigation.html.twig
+++ b/templates/layouts/admin/navigation.html.twig
@@ -13,9 +13,8 @@
         {# <li class="nav-item active">
           <a class="nav-link" data-toggle="modal" data-target="#myModal" href="">Compte <span class="sr-only">(current)</span></a>
         </li> #}
-
         <li class="nav-item active">
-          <a class="nav-link" href="">Supprimer tous les clients <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="" id="remove">Supprimer tous les clients <span class="sr-only">(current)</span></a>
         </li>
 
         {# <li class="nav-item dropdown">
