--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,39 +4,49 @@
 <head>
 	<meta charset="UTF-8">
 	<title>
-		{% block title %}Welcome!
-		{% endblock %}
+		{% block title %}Welcome!{% endblock %}
 	</title>
 	{# Run `composer require symfony/webpack-encore-bundle`
 	and uncomment the following Encore helpers to start using Symfony UX #}
+	<link href="img/favicon.png" rel="icon">
+	<link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+	<!-- Bootstrap core CSS -->
+	<link href="dist/css/bootstrap.min.css" rel="stylesheet">
+	{# <link href="dist/css/style.css" rel="stylesheet"> #}
+	{# <link href="font/fontawesome/css/all.min.css" rel="stylesheet"> #}
+	<link href="font/themify-icons/css/themify-icons.css" rel="stylesheet">
+	<link href="dist/css/sweetalert.css" rel="stylesheet">
 	{% block stylesheets %}
 	<!--external css-->
 	{#{{ encore_entry_link_tags('app') }}#}
 	{% endblock %}
-	<link href="img/favicon.png" rel="icon">
-	<link href="img/apple-touch-icon.png" rel="apple-touch-icon">
-	<!-- Bootstrap core CSS -->
-	<link href="../dist/css/bootstrap.min.css" rel="stylesheet">
-	<link href="dist/css/sweetalert.css" rel="stylesheet">
 
 </head>
 
 <body>
 	{% include "layouts/admin/navigation.html.twig" %}
 	{% block body %}{% endblock %}
-	{% block javascripts %}
-	<script src="../dist/js//jquery.min.js"></script>
-	<script src="../dist/js//bootstrap.min.js"></script>
+	{% include "layouts/forms/modal.html.twig" %}
+	<script src="dist/js//jquery.min.js"></script>
+	<script src="dist/js//bootstrap.min.js"></script>
 	<script src="dist/js/sweetalert.min.js"></script>
-
 	{#{{ encore_entry_script_tags('app') }}#}
 	<script src="dist/js/Ajax.js"></script>
+	<script src="dist/js/navigation.js"></script>
+	
 	<script>
-		var url1= "{{path('insertClient')}}"
-		var url2= "{{path('deleteClient')}}"
-		insert(url1)
-		remove(url2)
+		var insertClient= "{{path('insertClient')}}"
+		var updateClient= "{{path('updateClient')}}"
+		var deleteClient= "{{path('deleteClient')}}"
+		var deleteOneClient= "{{path('deleteOneClient')}}"
+		var getIdClient= "{{path('clients')}}"
+		insert(insertClient)
+		update(updateClient)
+		remove(deleteClient)
+		removeOne(deleteOneClient)
+		client()
 	</script>
+	{% block javascripts %}
 	{% endblock %}
 </body>
 
