--- a/templates/layouts/admin/navigation.html.twig
+++ b/templates/layouts/admin/navigation.html.twig
@@ -1,18 +1,24 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">FENIX</a>
+    <a class="navbar-brand" href="{{path('clients')}}">FENIX</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarsExample05">
       <ul class="navbar-nav">
+        {# <li class="nav-item active">
+          <a class="nav-link"  href="{{path('consulterClient')}}">Clients <i class="ti-book"></i> </i></a>
+        </li> #}
         <li class="nav-item active">
-          <a class="nav-link" data-toggle="modal" data-target="#myModal" href="">Client <span class="sr-only">(current)</span></a>
+          <a id="menu" class="nav-link"  href="{{path('compte_index')}}">Comptes <i class="ti-book"></i> </i></a>
+        </li>
+        {# <li class="nav-item active">
+          <a class="nav-link" href="{{path('crud_client_new')}}">New Client <span class="sr-only">(current)</span></a>
+        </li> #}
+        <li class="nav-item active">
+          <a class="nav-link" href="{{path('clients')}}">home <span class="sr-only">(current)</span></a>
         </li>
 
-        {# <li class="nav-item active">
-          <a class="nav-link" data-toggle="modal" data-target="#myModal" href="">Compte <span class="sr-only">(current)</span></a>
-        </li> #}
         <li class="nav-item active">
           <a class="nav-link" href="" id="remove">Supprimer tous les clients <span class="sr-only">(current)</span></a>
         </li>
