--- a/templates/client/consulter.html.twig
+++ b/templates/client/consulter.html.twig
@@ -1,35 +1,38 @@
-<h1>Banque numérique Avec symfony et Ajax et la POO v1.0</h1>
-		<div class="row">
-			<div class="col-md-12">
-				<button class="btn btn-primary" data-toggle="modal" data-target="#myModal"><i class="ti-plus"></i></button>
-				<table class="table table-bordered table-responsible">
-					<thead>
-						<tr>
-							<th>#</th>
-							<th>Nom</th>
-							<th>Contact</th>
-							<th>Consulter</th>
-						</tr>
-					</thead>
-					<tbody>
-						{% for client in clients %}
-							<tr>
-								<td>{{client.id}}</td>
-								<td>{{client.nom}}</td>
-								<td>{{client.contact}}</td>
-								<td>
-									<a onclick=t() href="{{path('consulterClient')}}" class="btn btn-primary">Consulter</a>
-								</td>
-							</tr>
+{% extends "base.html.twig" %}
+{% block body %}
 
-						{% else %}
-							<tr>
-								<td colspan="3" class="text-center">{{'Tableau vide ...'}}</td>
-							</tr>
-						{% endfor %}
-					</tbody>
-				</table>
-			</div>
-			{# end col #}
+<div class="container offset-1">
+	<div class="row container">
+		<div class="col-md-12">
+			<button class="btn btn-primary" data-toggle="modal" data-target="#client"><i class="ti-plus"></i></button>
+			<table class="table table-bordered table-responsible">
+				<thead>
+					<tr>
+						<th>#</th>
+						<th>Nom</th>
+						<th>Contact</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% if client %}
+					<tr>
+						<td>{{client.id}}</td>
+						<td>{{client.nom}}</td>
+						<td>{{client.contact}}</td>
+					</tr>
+					{% else %}
+						<tr>
+							<td colspan="3">Aucun ...</td>
+						</tr>
+					{% endif %}
+					
+	
+				</tbody>
+			</table>
 		</div>
-		{# end row #}
+		{# end col #}
+	</div>
+	{# end row #}
+
+</div>
+{% endblock %}
