on essaie d'afficher l'id du client avec un appel ajax(révisé) et ça  mache, on a réussi à modifier les données en ajax par le modal,on a reussi à invoquer le modal en ajax par la methode ->modal()

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,7 +41,7 @@
 		var deleteOneClient= "{{path('deleteOneClient')}}"
 		var getIdClient= "{{path('clients')}}"
 		insert(insertClient)
-		update(updateClient)
+		update(updateClient,getIdClient)
 		remove(deleteClient)
 		removeOne(deleteOneClient)
 		client()
