--- a/templates/layouts/forms/modal.html.twig
+++ b/templates/layouts/forms/modal.html.twig
@@ -5,17 +5,12 @@
       <div class="modal-dialog" role="document">
           <div class="modal-content">
               <div class="modal-header">
-                  <h5 class="modal-title">Client</h5>
+                  <h5 class="modal-title">Enregistrer le Client</h5>
                   <button type="button" class="close" data-dismiss="modal"><span>&times;</span>
                   </button>
               </div>
               <div class="modal-body">
                 <form autocomplete="off" id="quickForm">
-                    <div class="form-group">
-                      <input type="text" name="id" class="form-control" id="id" placeholder="Id" data-rule="minlen:1"
-                        data-msg="Entrer">
-                      <div class="validate"></div>
-                    </div>
                     <div class="form-group">
                       <input type="text" name="name" class="form-control" id="name" placeholder="Votre Nom" data-rule="minlen:1"
                         data-msg="Entrer">
@@ -51,7 +46,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Compte</h5>
+                    <h5 class="modal-title">Enregistrer une oppération sur le Compte</h5>
                     <button type="button" class="close" data-dismiss="modal"><span>&times;</span>
                     </button>
                 </div>
@@ -99,7 +94,7 @@
       <div class="modal-dialog">
           <div class="modal-content">
               <div class="modal-header">
-                  <h5 class="modal-title">Mise à jour</h5>
+                  <h5 class="modal-title">Mettre à jour le client</h5>
                   <button type="button" class="close" data-dismiss="modal"><span>&times;</span>
                   </button>
               </div>
@@ -136,15 +131,44 @@
   {# <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">Modal centered</button> #}
   <!-- Modal -->
   <div class="modal fade" id="exampleModalCenter">
-      <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-dialog" role="document">
           <div class="modal-content">
               <div class="modal-header">
-                  <h5 class="modal-title">Modal title</h5>
+                  <h5 class="modal-title">Consulter les infos sur le client</h5>
                   <button type="button" class="close" data-dismiss="modal"><span>&times;</span>
                   </button>
               </div>
               <div class="modal-body">
-                  <p>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
+                    <div class="container">
+                        <div class="row container">
+                            <div class="col-md-12">
+                                <table class="table table-striped" id="table">
+                                    <thead>
+                                        <tr>
+                                            {# <th>#</th>
+                                            <th>Nom</th>
+                                            <th>Contact</th> #}
+                                            <th>Solde</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                    
+                                        <tr>
+                                            {# <td class="idc"></td>
+                                            <td class="nom"></td>
+                                            <td class="contact"></td> #}
+                                            <td>O FCA</td>
+                                        </tr>
+                    
+                                    </tbody>
+                                </table>
+                            </div>
+                            {# end col #}
+                        </div>
+                        {# end row #}
+                    
+                    </div>
+                    {# end container #}
               </div>
               <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
