on essaie d'afficher l'id du client avec un appel ajax(révisé) et ça  mache, on a réussi à modifier les données en ajax par le modal,on a reussi à invoquer le modal en ajax par la methode ->modal()

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,11 +44,10 @@
 		var insertClient= "{{path('insertClient')}}"
 		var updateClient= "{{path('updateClient')}}"
 		var deleteClient= "{{path('deleteClient')}}"
-		var deleteOneClient= "{{path('deleteOneClient')}}"
 		var index= "{{path('clients')}}"
 		insert(insertClient,index)
 		update(updateClient,index)
-		remove(deleteClient,deleteOneClient)
+		remove(deleteClient,index)
 		showClient()
 	</script>
 	{% block javascripts %}
