--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,9 +30,9 @@
 </head>
 
 <body>
-	{% include "layouts/admin/navigation.html.twig" %}
+	{% include "layouts/navigation.html.twig" %}
 	{% block body %}{% endblock %}
-	{% include "layouts/forms/modal.html.twig" %}
+	{% include "layouts/modal.html.twig" %}
 	<script src="dist/js//jquery.min.js"></script>
 	<script src="dist/js//bootstrap.min.js"></script>
 	<script src="dist/js/sweetalert.min.js"></script>
