--- a/templates/layouts/modal.html.twig
+++ b/templates/layouts/modal.html.twig
@@ -12,12 +12,11 @@
               <div class="modal-body">
                 <form autocomplete="off" id="quickForm">
                     <div class="form-group">
-                      <input type="text" name="name" class="form-control" id="name" placeholder="Votre Nom" data-rule="minlen:1"
-                        data-msg="Entrer">
+                      <input type="text" name="name" class="form-control" id="name" placeholder="Nom du client">
                       <div class="validate"></div>
                     </div>
                     <div class="form-group">
-                      <input type="name" name="adresse" class="form-control" id="adresse" placeholder="Votre contact"
+                      <input type="name" name="adresse" class="form-control" id="adresse" placeholder="Numéro de téléphone"
                         data-rule="minlen:1" data-msg="Entrer">
                       <div class="validate"></div>
                     </div>
@@ -53,17 +52,12 @@
                 <div class="modal-body">
                   <form autocomplete="off" id="quickForm">
                       <div class="form-group">
-                        <input type="text" name="id" class="form-control" id="id" placeholder="Id" data-rule="minlen:1"
+                        <input type="text" name="depot" class="form-control" id="depot" placeholder="Dépot" data-rule="minlen:1"
                           data-msg="Entrer">
                         <div class="validate"></div>
                       </div>
                       <div class="form-group">
-                        <input type="text" name="name" class="form-control" id="depot" placeholder="Dépot" data-rule="minlen:1"
-                          data-msg="Entrer">
-                        <div class="validate"></div>
-                      </div>
-                      <div class="form-group">
-                        <input type="name" name="adresse" class="form-control" id="retrait" placeholder="Retrait"
+                        <input type="name" name="retrait" class="form-control" id="retrait" placeholder="Retrait"
                           data-rule="minlen:1" data-msg="Entrer">
                         <div class="validate"></div>
                       </div>
@@ -101,7 +95,7 @@
                 <form autocomplete="off" id="quickForm">
                     <div class="form-group">
                         <label for="idc">Client n°:</label>
-                      <input type="text" name="idc" class="form-control" id="idc">
+                      <input type="text" name="idc" class="form-control" id="idc" disabled>
                       <div class="validate"></div>
                     </div>
                     <div class="form-group">
