on essaye d'ajouter un client et son compte, les depots et retraits dans une meme page, on a finit d'expérimenter le service qui enregistre,modifie,affiche et supprime les clients mais pas celui du compte(le service), on a expérimenter l'heritage, le polymorphysme

--- a/templates/back/index.html.twig
+++ b/templates/back/index.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
 <div id="wrapper">
 
-    <div class="container">
+    <div class="container offset-2">
         <h1>Liste des comptes bancaires</h1>
         
         <table class="table table-bordered">
@@ -11,20 +11,16 @@
                     <th><button class="btn btn-primary" data-toggle="modal" data-target="#client">Compte <i class="ti-plus"></i></button></th>
                     <th>#</th>
                     <th>Num compte</th>
-                    <th>Solde</th>
-                    <th>Client</th>
-
+                    <th colspan="3">Client</th>
                 </tr>
             </thead>
         
             <tbody>
                 {% for item in comptes %}
                 <tr>
-                    <td><a class="btn_show_client btn btn-warning" href="{{path('consulterClient',{id:item.id})}}"></i> Dépot/Retrait</a></td>
+                    <td><a class="btn_compte btn btn-warning" href="{{path('consulterClient',{id:item.id})}}"></i> Dépot/Retrait</a></td>
                     <td>{{item.id}}</td>
                     <td>{{item.numero}}</td>
-                    <td>{{item.solde}}</td>
-                    <td>{{item.client.nom}}</td>
                     <td>
                         <a class="btn_show_client btn btn-success" href="{{path('consulterClient',{id:item.id})}}"></i> Consulter</a>
 						<a class="btn_update_client btn btn-primary" href="{{path('consulterClient',{id:item.client.id})}}">Modifier</a>
