on a terminé le système d'enregistrement des clients et leurs compes, le depot et le retait d'argent du compte, la suppresion,la modification et la selection des clients, la POO sur symfony avec l'heritage,le polymorphismee, l'injection des dépendances pour le concept des services

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,10 +44,11 @@
 		var insertClient= "{{path('insertClient')}}"
 		var updateClient= "{{path('updateClient')}}"
 		var deleteClient= "{{path('deleteClient')}}"
-		var depotCompte= "{{path('compte_update')}}"
-		var index= "{{path('clients')}}"
+		var depotCompte= "{{path('depotCompte')}}"
+		var retraitCompte= "{{path('retraitCompte')}}"
+		var index= "{{path('comptes')}}"
 		insert(insertClient,index)
-		update(updateClient,index,depotCompte,depotCompte)
+		update(updateClient,depotCompte,retraitCompte)
 
 		remove(deleteClient,index)
 		showClient()
