--- a/templates/layouts/modal.html.twig
+++ b/templates/layouts/modal.html.twig
@@ -53,12 +53,12 @@
                   <form autocomplete="off" id="quickForm">
                       <div class="form-group">
                         <label for="id_depot">Numero de Compte</label>
-                        <input type="text" name="num_co" class="form-control" id="id_compte" disabled>
+                        <input type="text" name="id_compte" class="form-control" id="id_compte" disabled>
                         <div class="validate"></div>
                       </div>
                       <div class="form-group">
                         <label for="somme">Somme</label>
-                        <input type="name" name="" class="form-control" id="somme" placeholder="Entrer la Somme"
+                        <input type="text" name="somme" class="form-control" id="somme" placeholder="Entrer la Somme"
                           >
                         <div class="validate"></div>
                       </div>
