on a modifié le fichier de navigation

--- a/templates/back/index.html.twig
+++ b/templates/back/index.html.twig
@@ -3,7 +3,7 @@
 <div id="wrapper">
 
     <div class="container offset-2">
-        <h1>Liste des comptes bancaires</h1>
+        <h1>Liste des comptes</h1>
         
         <table class="table table-bordered">
             <thead>
