--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
 	<div class="container offset-1">
 		<h1>
-			<p style="color:aqua; display:inline-block ">Compte Bancaire Avec </p>
+			<p style="color:aqua; display:inline-block ">Gestion du Portefeuille Avec </p>
 			<p style="display:inline-block; color:blueviolet; ">symfony</p> 
 			<p style="display:inline-block; color:chartreuse; ">et</p> 
 			<p style="display:inline-block ; color:cornflowerblue">Ajax</p></h1>
@@ -17,7 +17,7 @@
 							<th>#</th>
 							<th>Nom</th>
 							<th>Contact</th>
-							<th style="width: 30%;">Options</th>
+							{# <th style="width: 30%;">Options</th> #}
 						</tr>
 					</thead>
 					
