--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>
-		{% block title %}Welcome!{% endblock %}
+		{% block title %}Portefeuille!{% endblock %}
 	</title>
 	{# Run `composer require symfony/webpack-encore-bundle`
 	and uncomment the following Encore helpers to start using Symfony UX #}
@@ -13,8 +13,8 @@
 	<!-- Bootstrap core CSS -->
 	<link href="dist/css/bootstrap.min.css" rel="stylesheet">
 	{# <link href="dist/css/style.css" rel="stylesheet"> #}
-	{# <link href="font/fontawesome/css/all.min.css" rel="stylesheet"> #}
-	<link href="font/themify-icons/css/themify-icons.css" rel="stylesheet">
+	<link href="font/fontawesome/css/all.min.css" rel="stylesheet">
+	{# <link href="font/themify-icons/css/themify-icons.css" rel="stylesheet"> #}
 	<link href="dist/css/sweetalert.css" rel="stylesheet">
 	<style>
 		#table th,td{
