modification du système de navigation

--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -11,6 +11,8 @@
 				
     		<!-- Modal -->
 				{# <button class="btn btn-primary" data-toggle="modal" data-target="#client">Nouveau client <i class="ti-plus"></i></button> #}
+				<a class="nav-link" href="" id="remove"><i class="fa fa-times"></i> Supprimer tous les clients <span
+					class="sr-only">(current)</span></a>
 				<table class="table table-bordered">
 					<thead>
 						<tr>
